# SophOMR

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  main.cpp
include/: compress.h  decode.h  detect.h  global.h  param.h  setup.h  signal.h  sophomr.h
src/: compress.cpp  decode.cpp  detect.cpp  global.cpp  param.cpp  setup.cpp  signal.cpp  sophomr.cpp
